solc_mutator_ossfuzz_seed_corpus/test_sol/test_75806bc085c165cfc0d4c380acf3f7ce789b5ef1bd64b4189a7272a8cc63e17a_2c2dc5cbcc941f2cf013729a1b53acdbfbee9ae4_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma solidity >= 0.0.0;

==== Source: su1.sol ====
contract C0 {
  event ev0(int64  ep0, uint224[2][6][][][4][] indexed ep1);
  int256 immutable  s0 = int256(0);
  address immutable public s1;
  constructor(address i0)   {
    s1 = address(this);
    {
      revert(string("ffffffffffffff000000000000000000000000000000000000000000"));
    }
  }
}
pragma solidity >= 0.0.0;
library L0 {
  modifier m0(string memory i0) 
  {
    address payable l0 = payable(address(0x0000000000000000000000000000000000000007));
    _;
  }
}
library L1 {
  modifier m1(uint144[][9][][] memory i0) 
  {
    _;
    if ((((int160((((int160(0) - int160(346502912805438667756488276787850909890447350482)) + int160(-348236031199146188184258064092106267993476500257)) / int160(531120999799948864546935864575435050149305868514))) | int160(730750818665451459101842416358141509827966271487)) % int160(148637835980522597568157277115863281491855533348)) != int160(-259650405599184619059838287474934438451799126063)))
    {
    }
  }
}
// ----
// Warning 5667: (su1.sol:156-166): Unused function parameter. Remove or comment out the variable name to silence this warning.
// CodeGenerationError 1284: Some immutables were read from but never assigned, possibly because of optimization.
